force-app/main/default/objects/Indicator_Catalogue__c/Indicator_Catalogue__c.object-meta.xml
<CustomObject>
    <description>List of impact reporting indicators</description>
    <label>Indicator Catalogue</label>
    <nameField>
        <displayFormat>IC-{00000000}</displayFormat>
        <label>Indicator Catalogue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicator Catalogues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>