force-app/main/default/objects/Indicator_Catalogue__c/fields/Calculation__c.field-meta.xml
<CustomField>
    <fullName>Calculation__c</fullName>
    <description>An outline of the relevant mathematical calculation, if the metric requires a calculation or formula. Some formulas are based on other IRIS metrics and are clearly indicated as such.</description>
    <label>Calculation</label>
    <type>TextArea</type>
</CustomField>