force-app/main/default/objects/Indicator_Catalogue__c/fields/Citation__c.field-meta.xml
<CustomField>
    <fullName>Citation__c</fullName>
    <description>The citation that should be used in public materials when providing data related to the specific metric.</description>
    <label>Citation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>