force-app/main/default/objects/Indicator_Catalogue__c/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <description>The definition of the metric.  Please note that bolded words are glossary terms that can be found in the glossary tab.</description>
    <label>Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>