force-app/main/default/objects/Indicator_Catalogue__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>External ID of for example the IRIS indicator ID</description>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>