force-app/main/default/objects/Indicator_Catalogue__c/fields/Footnote__c.field-meta.xml
<CustomField>
    <fullName>Footnote__c</fullName>
    <description>Prompts for information that should be cited in conjunction with the metric. This information enables increased transparency in how the reported values were calculated and helps with the dissemination of contextual information that may be crucial to understanding the reported values.</description>
    <label>Footnote</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>