force-app/main/default/objects/Indicator_Catalogue__c/fields/Indicator_Name__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Name__c</fullName>
    <label>Indicator Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>