force-app/main/default/objects/Indicator_Catalogue__c/fields/Individual_Communities__c.field-meta.xml
<CustomField>
    <fullName>Individual_Communities__c</fullName>
    <label>Individual/Communities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Communities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>