force-app/main/default/objects/Indicator_Catalogue__c/fields/Metric_Level__c.field-meta.xml
<CustomField>
    <fullName>Metric_Level__c</fullName>
    <description>Specifies whether the metric captures information at the organization, product/service level or both. IRIS metrics can be used to differentiate between data points that apply to specific products/services offered by the organization and data points that apply to the organization as a whole. In instances where a metric can be used to describe either a product or the organization, organizations are encouraged to indicate the level at which they are reporting information.</description>
    <label>Metric Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Product/Service</fullName>
            </value>
            <value>
                <fullName>Product/Service, Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>