force-app/main/default/objects/Indicator_Catalogue__c/fields/Metric_Quantity_Type__c.field-meta.xml
<CustomField>
    <fullName>Metric_Quantity_Type__c</fullName>
    <description>Specifies whether the quantity captured in the metric is a stock or a flow.
- Stock:  Metrics that capture information and data at a specified point in time. The majority of stock metrics ask for information reported as of the end of a reporting period.   
- Flow:  Metrics that capture information and data measured over an interval of time. The majority of flow metrics ask for information based on activities over the course of a reporting period. 

As an example, IRIS employee metrics are stock metrics and ask for the number of employees as of the end of the reporting period. IRIS wage metrics are flow metrics and ask for the value of wages paid over the course of the reporting period.</description>
    <label>Metric Quantity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>