force-app/main/default/objects/Indicator_Catalogue__c/fields/Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>Metric_Type__c</fullName>
    <description>Specifies whether a particular metric is a &#39;metric&#39; or &#39;submetric&#39;.  The information captured by a &#39;submetric&#39; is related to the information captured by its parent &#39;metric&#39;. For example, Client Individuals: Female (submetric) captures a subset of what is captured under its parent Client Individuals: Total (metric).  

Please note that submetrics are not mutually exclusive. For example, individuals reported as part of Client Individuals: Female (submetric) may also be reported as part of Client Individuals: Rural (submetric).</description>
    <label>Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metric</fullName>
            </value>
            <value>
                <fullName>Submetric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>