force-app/main/default/objects/Indicator_Catalogue__c/fields/Metrics_Library__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Library__c</fullName>
    <label>Metrics Library</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IRIS 4.0</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>