force-app/main/default/objects/Indicator_Catalogue__c/fields/Metrics_Name__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Name__c</fullName>
    <description>The name of the metric.</description>
    <label>Metrics Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>