force-app/main/default/objects/Indicator_Catalogue__c/fields/Outcome_Area__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Area__c</fullName>
    <label>Outcome Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Cross-Sector</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing/Community Facilities</fullName>
            </value>
            <value>
                <fullName>Land Conservation</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Employment, training and education</fullName>
            </value>
            <value>
                <fullName>Housing and local facilities</fullName>
            </value>
            <value>
                <fullName>Income and financial inclusion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>