force-app/main/default/objects/Indicator_Catalogue__c/fields/Related_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Related_Metrics__c</fullName>
    <description>A list of the IRIS metric and submetrics that relate to the specific metric being reviewed. (See Metric Type for more information).

Please note that submetrics are not mutually exclusive.  For example, individuals reported as part of Client Individuals: Female (submetric) may also be reported as part of Client Individuals: Rural (submetric).</description>
    <label>Related Metrics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>