force-app/main/default/objects/Indicator_Catalogue__c/fields/Reporting_Format__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Format__c</fullName>
    <description>The format for reporting against the specific metric. Examples of reporting formats include: Unit Referenced Within Metric Definition, Decimal, Text, Unit of Measure (PD1602), amongst others. The reporting format &quot;Unit Referenced Within Metric Definition&quot; reduces confusion and encourages the user to read the metric&#39;s definition to understand the unit to be measured and reported, since many of these values are bespoke (e.g., number of full-time employees). Some metrics such as Reporting Currency (OD5990) and Unit of Measure (PD1602) refer to specific sets of option values (which are described within their Definition); for these, users should indicate which option is used.</description>
    <label>Reporting Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Number of Metric Tons of CO2 Equivalent</fullName>
            </value>
            <value>
                <fullName>Reporting Currency (OD5990)</fullName>
            </value>
            <value>
                <fullName>Selection</fullName>
            </value>
            <value>
                <fullName>Selection of 3 letter code</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Text (multiple entries possible)</fullName>
            </value>
            <value>
                <fullName>Unit of Measure (PD1602)</fullName>
            </value>
            <value>
                <fullName>Unit of Measure (PD1602) selection per Hectare</fullName>
            </value>
            <value>
                <fullName>Unit Referenced within Metric Definition</fullName>
            </value>
            <value>
                <fullName>Yes/No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>