force-app/main/default/objects/Indicator_Catalogue__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>A primary categorization of each IRIS metric. The IRIS metrics are organized in a framework that includes 5 core sections:
- Organization Description: metrics that focus on the organization&#39;s mission, operational model, and location
- Product Description: metrics that describe the organization&#39;s products and services, and target markets
- Financial Performance: commonly reported financial metrics
- Operational Impact: metrics that describe the organization&#39;s policies, employees, and environmental performance
- Product Impact: metrics that describe the performance and reach of the organization&#39;s products and services
Please note that some metrics apply to more than one section but are placed in only one primary category.</description>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Performance</fullName>
            </value>
            <value>
                <fullName>Operational Impact</fullName>
            </value>
            <value>
                <fullName>Organizational Description</fullName>
            </value>
            <value>
                <fullName>Product Description</fullName>
            </value>
            <value>
                <fullName>Product Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>