force-app/main/default/objects/Indicator_Catalogue__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>A categorization of each metric across one of the following ten sectors: 
- Agriculture
- Education
- Energy
- Environment
- Financial Services
- Land Conservation
- Health
- Housing/Community Facilities
- Water
- Cross-Sector
Please note that some metrics apply to more than one sector but are placed in only one primary sector; some metrics are classified as Cross-Sector.</description>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Cross-Sector</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing/Community Facilities</fullName>
            </value>
            <value>
                <fullName>Land Conservation</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>