force-app/main/default/objects/Indicator_Catalogue__c/fields/Standard_Custom__c.field-meta.xml
<CustomField>
    <fullName>Standard_Custom__c</fullName>
    <label>Standard - Custom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>