force-app/main/default/objects/Indicator_Catalogue__c/fields/Subsection__c.field-meta.xml
<CustomField>
    <fullName>Subsection__c</fullName>
    <description>A more detailed categorization of each IRIS metric. There are 21 subsections in total in IRIS 4.0, ranging from Client Information to Environmental Performance.</description>
    <label>Subsection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Cash Flow</fullName>
            </value>
            <value>
                <fullName>Client Information</fullName>
            </value>
            <value>
                <fullName>Distributor Information</fullName>
            </value>
            <value>
                <fullName>Employees</fullName>
            </value>
            <value>
                <fullName>Environmental Performance</fullName>
            </value>
            <value>
                <fullName>Environmental Policies</fullName>
            </value>
            <value>
                <fullName>Governance &amp; Ownership</fullName>
            </value>
            <value>
                <fullName>Impact Objectives</fullName>
            </value>
            <value>
                <fullName>Income Statement</fullName>
            </value>
            <value>
                <fullName>Organizational Information</fullName>
            </value>
            <value>
                <fullName>Product/Service Information</fullName>
            </value>
            <value>
                <fullName>Quality &amp; Performance</fullName>
            </value>
            <value>
                <fullName>Quantity &amp; Reach</fullName>
            </value>
            <value>
                <fullName>Ratios, Concepts, and Calculations</fullName>
            </value>
            <value>
                <fullName>Report Information</fullName>
            </value>
            <value>
                <fullName>Social Policies</fullName>
            </value>
            <value>
                <fullName>Supplier Information</fullName>
            </value>
            <value>
                <fullName>Target Beneficiaries</fullName>
            </value>
            <value>
                <fullName>Training &amp; Assessment</fullName>
            </value>
            <value>
                <fullName>Wages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>