force-app/main/default/objects/Indicator_Catalogue__c/fields/Usage_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Usage_Guidance__c</fullName>
    <description>Additional information beyond the details and description provided in the metric definition. This may include considerations related to aggregating data for this metric, recommended sources for supplementary information pertaining to the metric, clarification of  the metric calculation and intended usage, among other guidance. This is a dynamic field, and the IRIS initiative welcomes feedback on how to further develop this for each metric.</description>
    <label>Usage Guidance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>