force-app/main/default/objects/Indicator_Catalogue__c/recordTypes/BSC.recordType-meta.xml
<RecordType>
    <fullName>BSC</fullName>
    <active>true</active>
    <description>Outcomes Matrix provided by Big Society Capital (BSC) and GoodFinance</description>
    <label>BSC</label>
</RecordType>