force-app/main/default/objects/Indicator_Catalogue__c/recordTypes/Custom.recordType-meta.xml
<RecordType>
    <fullName>Custom</fullName>
    <active>true</active>
    <description>A custom indicator, not part of any standard library</description>
    <label>Custom</label>
</RecordType>