force-app/main/default/objects/Indicator_Catalogue__c/recordTypes/IRIS.recordType-meta.xml
<RecordType>
    <fullName>IRIS</fullName>
    <active>true</active>
    <description>Impact Measurement library created by the Global Impact Investing Network (GIIN)</description>
    <label>IRIS</label>
</RecordType>